--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.2",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "bootstrapp": "^0.0.0",
     "express": "^4.18.2",
+    "jquery": "^3.7.1",
     "ng-zorro-antd": "^17.3.0",
+    "owl.carousel": "^2.3.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
